logs/validate.20260408-035458.log
Mode: isolate
<<<<<<< HEAD
Isolate: including Chap19 Chap02
verification results:: 908 verified, 0 errors
Elapsed: 8s
Sampled Memory Usage: peak rust_verify RSS: 3036MB, peak z3 RSS: 480MB, min free: 23023MB
Sampled CPU Usage: rust_verify: 41s, z3 children: 20s
=======
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error: unexpected token, expected `;`
   --> src/Chap37/BSTPlainMtEph.rs:482:37
    |
482 | ...                   by {
    |                       ^^

error[E0425]: cannot find type `BSTPlainMtEphInv` in this scope
   --> src/Chap37/BSTPlainMtEph.rs:875:33
    |
875 |     impl<T> std::fmt::Debug for BSTPlainMtEphInv<T> {
    |                                 ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTPlainMtEphInv` in this scope
   --> src/Chap37/BSTPlainMtEph.rs:881:35
    |
881 |     impl<T> std::fmt::Display for BSTPlainMtEphInv<T> {
    |                                   ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTPlainMtEph` in this scope
   --> src/Chap37/BSTPlainMtEph.rs:889:45
    |
889 |     impl<T: TotalOrder> std::fmt::Debug for BSTPlainMtEph<T> {
    |                                             ^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
   --> src/Chap37/BSTPlainMtEph.rs:889:13
    |
889 |     impl<T: TotalOrder> std::fmt::Debug for BSTPlainMtEph<T> {
    |             ^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
    |

error[E0425]: cannot find type `BSTPlainMtEph` in this scope
   --> src/Chap37/BSTPlainMtEph.rs:895:47
    |
895 |     impl<T: TotalOrder> std::fmt::Display for BSTPlainMtEph<T> {
    |                                               ^^^^^^^^^^^^^ not found in this scope

error[E0405]: cannot find trait `TotalOrder` in this scope
   --> src/Chap37/BSTPlainMtEph.rs:895:13
    |
895 |     impl<T: TotalOrder> std::fmt::Display for BSTPlainMtEph<T> {
    |             ^^^^^^^^^^ not found in this scope
    |
help: consider importing this trait
    |
 31 +     use crate::vstdplus::total_order::total_order::TotalOrder;
    |

error[E0425]: cannot find type `BSTPlainMtEph` in this scope
  --> src/Chap37/BSTSetPlainMtEph.rs:43:19
   |
43 |         pub tree: BSTPlainMtEph<T>,
   |                   ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `BSTPlainMtEph` in this scope
   --> src/Chap37/BSTSetPlainMtEph.rs:143:38
    |
 42 |     pub struct BSTSetPlainMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ----------------------------------------------------------- similarly named struct `BSTSetPlainMtEph` defined here
...
143 |         fn as_tree(&self) -> (tree: &BSTPlainMtEph<T>)
    |                                      ^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
143 |         fn as_tree(&self) -> (tree: &BSTSetPlainMtEph<T>)
    |                                         +++

error[E0425]: cannot find type `BSTPlainMtEph` in this scope
   --> src/Chap37/BSTSetPlainMtEph.rs:159:58
    |
 42 |     pub struct BSTSetPlainMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ----------------------------------------------------------- similarly named struct `BSTSetPlainMtEph` defined here
...
159 |     fn values_vec<T: StTInMtT + Ord + TotalOrder>(tree: &BSTPlainMtEph<T>) -> (values: Vec<T>)
    |                                                          ^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
159 |     fn values_vec<T: StTInMtT + Ord + TotalOrder>(tree: &BSTSetPlainMtEph<T>) -> (values: Vec<T>)
    |                                                             +++

error[E0425]: cannot find type `BSTPlainMtEph` in this scope
   --> src/Chap37/BSTSetPlainMtEph.rs:180:83
    |
 42 |     pub struct BSTSetPlainMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ----------------------------------------------------------- similarly named struct `BSTSetPlainMtEph` defined here
...
180 |     fn rebuild_from_vec<T: StTInMtT + Ord + TotalOrder>(values: Vec<T>) -> (tree: BSTPlainMtEph<T>)
    |                                                                                   ^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
180 |     fn rebuild_from_vec<T: StTInMtT + Ord + TotalOrder>(values: Vec<T>) -> (tree: BSTSetPlainMtEph<T>)
    |                                                                                      +++

error[E0425]: cannot find type `BSTPlainMtEph` in this scope
   --> src/Chap37/BSTSetPlainMtEph.rs:484:31
    |
 42 |     pub struct BSTSetPlainMtEph<T: StTInMtT + Ord + TotalOrder> {
    |     ----------------------------------------------------------- similarly named struct `BSTSetPlainMtEph` defined here
...
484 |         fn as_tree(&self) -> &BSTPlainMtEph<T> { &self.tree }
    |                               ^^^^^^^^^^^^^
    |
help: a struct with a similar name exists
    |
484 |         fn as_tree(&self) -> &BSTSetPlainMtEph<T> { &self.tree }
    |                                  +++

error[E0433]: failed to resolve: use of undeclared type `BSTPlainMtEph`
   --> src/Chap37/BSTSetPlainMtEph.rs:183:24
    |
183 |         let mut tree = BSTPlainMtEph::new();
    |                        ^^^^^^^^^^^^^ use of undeclared type `BSTPlainMtEph`
    |
help: a struct with a similar name exists
    |
183 |         let mut tree = BSTSetPlainMtEph::new();
    |                           +++

error[E0433]: failed to resolve: use of undeclared type `BSTPlainMtEph`
   --> src/Chap37/BSTSetPlainMtEph.rs:202:24
    |
202 |         let mut tree = BSTPlainMtEph::new();
    |                        ^^^^^^^^^^^^^ use of undeclared type `BSTPlainMtEph`
    |
help: a struct with a similar name exists
    |
202 |         let mut tree = BSTSetPlainMtEph::new();
    |                           +++

error[E0433]: failed to resolve: use of undeclared type `BSTPlainMtEph`
   --> src/Chap37/BSTSetPlainMtEph.rs:224:23
    |
224 |                 tree: BSTPlainMtEph::new(),
    |                       ^^^^^^^^^^^^^ use of undeclared type `BSTPlainMtEph`
    |
help: a struct with a similar name exists
    |
224 |                 tree: BSTSetPlainMtEph::new(),
    |                          +++

error[E0433]: failed to resolve: use of undeclared type `BSTPlainMtEph`
   --> src/Chap37/BSTSetPlainMtEph.rs:230:28
    |
230 |             let mut tree = BSTPlainMtEph::new();
    |                            ^^^^^^^^^^^^^ use of undeclared type `BSTPlainMtEph`
    |
help: a struct with a similar name exists
    |
230 |             let mut tree = BSTSetPlainMtEph::new();
    |                               +++

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0405, E0425, E0433.
For more information about an error, try `rustc --explain E0405`.
Elapsed: 4s
Sampled Memory Usage: peak rust_verify RSS: 3036MB, peak z3 RSS: 521MB, min free: 23309MB
Sampled CPU Usage: rust_verify: 38s, z3 children: 6s
>>>>>>> agent4/ready
